--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     
-    <button class="btn" onclick="alert('Hola!')">Saludar</button>
+    <div class="container" id="btn-container">
+        <button class="btn" onclick="alert('Hola!')">Saludar</button>
+    </div>
 
+    <script src="eventos.js"></script>
 </body>
 </html>
