--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="container" id="btn-container">
-        <button class="btn" onclick="alert('Hola!')">Saludar</button>
+        <button class="btn" id="greet-btn">Saludar</button>
     </div>
 
     <script src="eventos.js"></script>
